# py-utils

./: LICENSE  Makefile  README.md  pyproject.toml
data/: profiles.json
src/: main.py  user_profile.py
src/user/: models.py  storage.py  utils.py
tests/: test_storage.py  test_user_profile.py
